releases/v1.0.2/_sources/references.rst.txt
##################
List of References
##################



The following is the full list of references that were used to implement theory codes and provide likelihood constraints
or parameter values within EOS v1.0.2.


.. [AAGW:2001A] Asatryan, H.H. and Asatrian, H.M. and Greub, C. and Walker, M. --
   Calculation of two loop virtual corrections to :math:`b \to s \ell^+ \ell^-` in the standard model --
   `arXiv:hep-ph/0109140 <https://arxiv.org/abs/hep-ph/0109140>`_

.. [ABBBSW:2008A] Altmannshofer, Wolfgang and Ball, Patricia and Bharucha, Aoife and Buras, Andrzej J. and Straub, David M. and Wick, Michael --
   Symmetries and Asymmetries of :math:`B \to K^{*} \mu^{+} \mu^{-}` Decays in the Standard Model and Beyond --
   `arXiv:0811.1214 <https://arxiv.org/abs/0811.1214>`_

.. [ABGW:2003A] Asatrian, H.M. and Bieri, K. and Greub, C. and Walker, M. --
   Virtual corrections and bremsstrahlung corrections to $b \to d \ell^+ \ell^- in the standard model --
   `arXiv:hep-ph/0312063 <https://arxiv.org/abs/hep-ph/0312063>`_

.. [ABHH:1999A] Ali, Ahmed and Ball, Patricia and Handoko, L.T. and Hiller, G. --
   A Comparative study of the decays :math:`B \to K^{(*)} \ell^+ \ell^-` in standard model and supersymmetric theories 

.. [AEMSS:2002A] Ahmady, M.R. and Elias, V. and McKeon, D.G.C. and Squires, A. and Steele, Thomas G. --
   Renormalization group improvement of effective actions beyond summation of leading logarithms --
   `arXiv:hep-ph/0211227 <https://arxiv.org/abs/hep-ph/0211227>`_

.. [AFGV:2017A] Aebischer, J. and Fael, M. and Greub, Ch. and Virto, J. --
   B physics Beyond the Standard Model at One Loop: Complete Renormalization Group Evolution below the Electroweak Scale --
   `arXiv:1704.06639 <https://arxiv.org/abs/1704.06639>`_

.. [ALGH:2001A] Ali, A. and Lunghi, E. and Greub, C. and Hiller, G. --
   Improved model independent analysis of semileptonic and radiative rare :math:`B` decays --
   `arXiv:hep-ph/0112300 <https://arxiv.org/abs/hep-ph/0112300>`_

.. [ATLAS+CMS+LHCb:2020A] ATLAS, CMS and LHCb --
   Combination of the ATLAS, CMS and LHCb results on the :math:`B^0_{(s)} \to \mu^+ \mu^-` decays 

.. [ATLAS:2013A] The ATLAS collaboration --
   Angular Analysis of :math:`B_d \to K^{*0} \mu^+ \mu^-` with the ATLAS experiment 

.. [ATLAS:2018A] Aaboud, Morad et al. --
   Study of the rare decays of :math:`B^0_s` and :math:`B^0` mesons into muon pairs using data collected during 2015 and 2016 with the ATLAS detector --
   `arXiv:1812.03017 <https://arxiv.org/abs/1812.03017>`_

.. [ATLAS:2018B] Aaboud, Morad et al. --
   Angular analysis of :math:`B^0_d \rightarrow K^{*}\mu^+\mu^-` decays in :math:`pp` collisions at :math:`\sqrt{s}= 8` TeV with the ATLAS detector --
   `arXiv:1805.04000 <https://arxiv.org/abs/1805.04000>`_

.. [ATLAS:2020A] Aad, G. et al. --
   Measurement of the :math:`CP`-violating phase :math:`\phi_s` in :math:`B^0_s \to J/\psi\phi` decays in ATLAS at 13 TeV --
   `arXiv:2001.07115 <https://arxiv.org/abs/2001.07115>`_

.. [B:1998A] Beneke, M. --
   A Quark mass definition adequate for threshold problems --
   `arXiv:hep-ph/9804241 <https://arxiv.org/abs/hep-ph/9804241>`_

.. [BB:1999A] Buchalla, Gerhard and Buras, Andrzej J. --
   The rare decays :math:`K\to \pi \nu\bar\nu`, :math:`B \to X \nu\bar\nu` and :math:`B \to \ell^+ \ell^-`: An Update 

.. [BBGJvD:2020A] Bobeth, Christoph and Bordone, Marzia and Gubernari, Nico and Jung, Martin and van Dyk, Danny --
   Lepton-flavour non-universality of :math:`\bar{B}\to D^*\ell \bar\nu` angular distributions in and beyond the Standard Model --
   `arXiv:2104.02094 <https://arxiv.org/abs/2104.02094>`_

.. [BBGORvD:2018A] Boeer, Philipp and Bordone, Marzia and Graverini, Elena and Owen, Patri and Rotondo, Marcello and van Dyk, Danny --
   Testing lepton flavour universality in semileptonic :math:`\Lambda_b \to \Lambda_c^*` decays --
   `arXiv:1801.08367 <https://arxiv.org/abs/1801.08367>`_

.. [BBL:1995A] Buchalla, Gerhard and Buras, Andrzej J. and Lautenbacher, Markus E. --
   Weak decays beyond leading logarithms --
   `arXiv:hep-ph/9512380 <https://arxiv.org/abs/hep-ph/9512380>`_

.. [BBL:2006A] Ball, Patricia and Braun, V.M. and Lenz, A. --
   Higher-twist distribution amplitudes of the K meson in QCD --
   `arXiv:hep-ph/0603063 <https://arxiv.org/abs/hep-ph/0603063>`_

.. [BBMU:2003A] Benson, D and Bigi, I.I. and Mannel, T. and Uraltsev, N. --
   Imprecated, yet impeccable: On the theoretical evaluation of :math:`\Gamma(B \to X_c \ell \nu)` --
   `arXiv:hep-ph/0302262 <https://arxiv.org/abs/hep-ph/0302262>`_

.. [BCL:2008A] Bourrely, Claude and Caprini, Irinel and Lellouch, Laurent --
   Model-independent description of :math:`B \to \pi \ell \nu` decays and a determination of :math:`|V_{ub}|` --
   `arXiv:0807.2722 <https://arxiv.org/abs/0807.2722>`_

.. [BCMU:2002A] Buras, Andrzej J. and Czarnecki, Andrzej and Misiak, Mikolaj and Urban, Jorg --
   Completing the NLO QCD calculation of :math:`\bar{B} \to X_s \gamma` --
   `arXiv:hep-ph/0203135 <https://arxiv.org/abs/hep-ph/0203135>`_

.. [BEKU:2002A] Bobeth, C. and Ewerth, T. and Kruger, F. and Urban, J. --
   Enhancement of :math:`\mathcal{B}(\bar{B}_d \to \mu^{+} \mu^{-}) / \mathcal{B}(\bar{B}_s \to \mu^{+} \mu^{-})` in the MSSM with minimal flavor violation and large tan beta --
   `arXiv:hep-ph/0204225 <https://arxiv.org/abs/hep-ph/0204225>`_

.. [BF:2001A] Beneke, M. and Feldmann, T. --
   Symmetry breaking corrections to heavy to light :math:`B` meson form-factors at large recoil --
   `arXiv:hep-ph/0008255 <https://arxiv.org/abs/hep-ph/0008255>`_

.. [BFNT:2019A] Becirevic, D. and Fedele, M. and Nisandzic I. and Tayduganov, A. --
   Lepton Flavor Universality tests through angular observables of :math:`\bar{B} \to D^{(*)} \ell \bar{nu}` decay modes --
   `arXiv:1907.02257 <https://arxiv.org/abs/1907.02257>`_

.. [BFS:2001A] Beneke, M. and Feldmann, T. and Seidel, D. --
   Systematic approach to exclusive :math:`B \to  V \ell^+ \ell^-`, :math:`V \gamma` decays --
   `arXiv:hep-ph/0106067 <https://arxiv.org/abs/hep-ph/0106067>`_

.. [BFS:2004A] Beneke, M. and Feldmann, Th. and Seidel, D. --
   Exclusive radiative and electroweak :math:`b \to d` and :math:`b \to s` penguin decays at NLO --
   `arXiv:hep-ph/0412400 <https://arxiv.org/abs/hep-ph/0412400>`_

.. [BFW:2010A] Bharucha, Aoife and Feldmann, Thorsten and Wick, Michael --
   Theoretical and Phenomenological Constraints on Form Factors for Radiative and Semi-Leptonic :math:`B`-Meson Decays --
   `arXiv:1004.3249 <https://arxiv.org/abs/1004.3249>`_

.. [BFvD:2014A] Boeer, Philipp and Feldmann, Thorsten and van Dyk, Danny --
   Angular Analysis of the Decay :math:`\Lambda_b \to \Lambda (\to N \pi) \ell^+\ell^-` --
   `arXiv:1410.2115 <https://arxiv.org/abs/1410.2115>`_

.. [BFvD:2016A] Boeer, P. and Feldmann, Th. and van Dyk, D. --
   QCD Factorization Theorem for :math:`B \to \pi \pi \ell \nu` Decays at Large Dipion Masses --
   `arXiv:1608.07127 <https://arxiv.org/abs/1608.07127>`_

.. [BGL:1997A] Boyd, C.G. and Grinstein, B. and Lebed, R.F. --
   Precision corrections to dispersive bounds on form-factors --
   `arXiv:hep-ph/9705252 <https://arxiv.org/abs/hep-ph/9705252>`_

.. [BGNS:2014A] Buras, Andrzej J. and Girrbach-Noe, Jennifer and Niehoff, Christoph and Straub, David M. --
   :math:`B\to {K}^{\left(\ast \right)}\nu \overline{\nu} ` decays in the Standard Model and beyond --
   `arXiv:1409.4557 <https://arxiv.org/abs/1409.4557>`_

.. [BGS:2010A] Brod, Joachim and Gorbahn, Martin and Stamou, Emmanuel --
   Two-Loop Electroweak Corrections for the :math:`K \to \pi \nu \bar{\nu}` Decays --
   `arXiv:1009.0947 <https://arxiv.org/abs/1009.0947>`_

.. [BGS:2017A] Bigi, Dante and Gambino, Paolo and Schacht, Stefan --
   :math:`R(D^*)`, :math:`|V_{cb}|`, and the Heavy Quark Symmetry relations between form factors --
   `arXiv:1707.09509 <https://arxiv.org/abs/1707.09509>`_

.. [BHP:2007A] Bobeth, Christoph and Hiller, Gudrun and Piranishvili, Giorgi --
   Angular distributions of :math:`\bar{B} \to \bar{K} \ell^+\ell^-` decays --
   `arXiv:0709.4174 <https://arxiv.org/abs/0709.4174>`_

.. [BHP:2008A] Bobeth, Christoph and Hiller, Gudrun and Piranishvili, Giorgi --
   CP Asymmetries in bar :math:`B \to \bar{K}^* (\to \bar{K} \pi) \bar{\ell} \ell` and Untagged :math:`\bar{B}_s`, :math:`B_s \to \phi (\to K^{+} K^-) \bar{\ell} \ell` Decays at NLO --
   `arXiv:0805.2525 <https://arxiv.org/abs/0805.2525>`_

.. [BHvD:2010A] Bobeth, Christoph and Hiller, Gudrun and van Dyk, Danny --
   The Benefits of :math:`\bar{B} \to \bar{K}^* l^+ l^-` Decays at Low Recoil --
   `arXiv:1006.5013 <https://arxiv.org/abs/1006.5013>`_

.. [BHvD:2011A] Bobeth, Christoph and Hiller, Gudrun and van Dyk, Danny --
   More Benefits of Semileptonic Rare B Decays at Low Recoil: CP Violation --
   `arXiv:1105.0376 <https://arxiv.org/abs/1105.0376>`_

.. [BHvD:2012A] Bobeth, Christoph and Hiller, Gudrun and van Dyk, Danny --
   General analysis of :math:`\bar{B} \to \bar{K}^{(*)}\ell^+ \ell^-`  decays at low recoil --
   `arXiv:1212.2321 <https://arxiv.org/abs/1212.2321>`_

.. [BIvD:2016A] Bordone, Marzia and Isidori, Gino and van Dyk, Danny --
   Impact of leptonic :math:`\tau ` decays on the distribution of :math:`B\rightarrow P\mu \bar{\nu }` decays --
   `arXiv:1602.06143 <https://arxiv.org/abs/1602.06143>`_

.. [BM:1995A] Buras, Andrzej J. and Munz, Manfred --
   Effective Hamiltonian for :math:`B \to X_s e^+ e^-` beyond leading logarithms in the NDR and HV schemes --
   `arXiv:hep-ph/9501281 <https://arxiv.org/abs/hep-ph/9501281>`_

.. [BMU:1999A] Bobeth, Christoph and Misiak, Mikolaj and Urban, Jorg --
   Photonic penguins at two loops and :math:`m_t` dependence of :math:`\mathcal{B}(B \to  X_s \ell^+ \ell^-)` --
   `arXiv:hep-ph/9910220 <https://arxiv.org/abs/hep-ph/9910220>`_

.. [BPR:2021A] Bernlochner, Florian U. and Prim, Markus T. and Robinson, Dean J. --
   :math:`B\to \rho \ell \bar{\nu}` and :math:`\omega\to \ell \bar{\nu}` in and beyond the Standard Model: Improved predictions and :math:`\abs{V_{ub}}` --
   `arXiv:2104.05739 <https://arxiv.org/abs/2104.05739>`_

.. [BS:2011A] Becirevic, Damir and Schneider, Elia --
   On transverse asymmetries in :math:`B \to K^* \ell^+\ell^-` --
   `arXiv:1106.3283 <https://arxiv.org/abs/1106.3283>`_

.. [BSZ:2015A] Bharucha, Aoife and Straub, David M. and Zwicky, Roman --
   :math:`B\to V\ell^+\ell^-` in the Standard Model from light-cone sum rules --
   `arXiv:1503.05534 <https://arxiv.org/abs/1503.05534>`_

.. [BZ:2004A] Ball, Patricia and Zwicky, Roman --
   :math:`B_{d,s} \to  \rho, \omega, K^*, \phi` decay form-factors from light-cone sum rules revisited --
   `arXiv:hep-ph/0412079 <https://arxiv.org/abs/hep-ph/0412079>`_

.. [BZ:2004B] Ball, Patricia and Zwicky, Roman --
   :math:`B \to \pi, K, \eta` decay formfactors from light-cone sum rules --
   `arXiv:hep-ph/0406261 <https://arxiv.org/abs/hep-ph/0406261>`_

.. [BZ:2004C] Ball, Patricia and Zwicky, Roman --
   New results on :math:`B \to \pi, K, \eta` decay formfactors from light-cone sum rules --
   `arXiv:hep-ph/0406232 <https://arxiv.org/abs/hep-ph/0406232>`_

.. [BaBar:2004A] Aubert, Bernard et al. --
   Measurement of the :math:`B \to X_s \ell^+ \ell^-` branching fraction with a sum over exclusive modes 

.. [BaBar:2007A] Aubert, Bernard et al. --
   Measurement of decay amplitudes of :math:`B \to J/\psi K^{*}, \psi(2S) K^{*}`, and :math:`\chi_{c1} K^{*}` with an angular analysis 

.. [BaBar:2008A] Aubert, Bernard et al. --
   Measurement of Time-Dependent CP Asymmetry in :math:`B^0 \to K^0_{S} \pi^0 \gamma` Decays 

.. [BaBar:2009A] Aubert, Bernard et al. --
   Measurement of Branching Fractions and CP and Isospin Asymmetries in :math:`B \to  K^*(892)\gamma` Decays 

.. [BaBar:2010A] del Amo Sanchez, P. et al. --
   Study of :math:`B \to \pi \ell \nu` and :math:`B \to \rho \ell \nu` Decays and Determination of :math:`|V_{ub}|` 

.. [BaBar:2010B] del Amo Sanchez, P. et al. --
   Measurement of the :math:`B^0 \to \pi^\ell \ell^+ \nu` and :math:`B^+ \to \eta^{(')} \ell^+ \nu` Branching Fractions, the :math:`B^0 \to \pi^- \ell^+ \nu` and :math:`B^+ \to \eta \ell^+ \nu` Form-Factor Shapes, and Determination of :math:`|V_{ub}|` --
   `arXiv:1010.0987 <https://arxiv.org/abs/1010.0987>`_

.. [BaBar:2012A] Lees, J.P. et al. --
   Measurement of Branching Fractions and Rate Asymmetries in the Rare Decays :math:`B \to K^{(*)} l^+ l^-` --
   `arXiv:1204.3933 <https://arxiv.org/abs/1204.3933>`_

.. [BaBar:2012B] Ritchie, Jack L. --
   Angular Analysis of :math:`B \to K^*\ell^+\ell^-` in BABAR --
   `arXiv:1301.1700 <https://arxiv.org/abs/1301.1700>`_

.. [BaBar:2012C] Lees, J.P. et al. --
   Measurement of B(:math:`B\to X_s \gamma`), the :math:`B\to X_s \gamma` photon energy spectrum, and the direct CP asymmetry in :math:`B\to X_{s+d} \gamma` decays --
   `arXiv:1207.5772 <https://arxiv.org/abs/1207.5772>`_

.. [BaBar:2012D] Lees, J.P. et al. --
   Branching fraction and form-factor shape measurements of exclusive charmless semileptonic B decays, and determination of :math:`|V_{ub}|` 

.. [BaBar:2013A] Lees, J.P. et al. --
   Measurement of the :math:`B \to X_s \ell^+\ell^-` branching fraction and search for direct CP violation from a sum of exclusive final states --
   `arXiv:1312.5364 <https://arxiv.org/abs/1312.5364>`_

.. [Belle:2004A] Nakao, M. et al. --
   Measurement of the :math:`B \to  K^* \gamma` branching fractions and asymmetries --
   `arXiv:hep-ex/0402042 <https://arxiv.org/abs/hep-ex/0402042>`_

.. [Belle:2005A] Iwasaki, M. et al. --
   Improved measurement of the electroweak penguin process :math:`B \to X_s \ell^+ \ell^-` --
   `arXiv:hep-ex/0503044 <https://arxiv.org/abs/hep-ex/0503044>`_

.. [Belle:2006A] Ushiroda, Y. et al. --
   Time-Dependent CP Asymmetries in :math:`B^0 \to  K^0_S \pi^0 \gamma` transitions --
   `arXiv:hep-ex/0608017 <https://arxiv.org/abs/hep-ex/0608017>`_

.. [Belle:2008A] Schwanda, C. et al. --
   Measurement of the Moments of the Photon Energy Spectrum in :math:`B \to X_s \gamma` Decays and Determination of :math:`|V_{cb}|` and :math:`m_b` at Belle --
   `arXiv:0803.2158 <https://arxiv.org/abs/0803.2158>`_

.. [Belle:2009A] Wei, J.-T. et al. --
   Measurement of the Differential Branching Fraction and Forward-Backword Asymmetry for :math:`B \to K^{(*)}\ell^+\ell^-` --
   `arXiv:0904.0770 <https://arxiv.org/abs/0904.0770>`_

.. [Belle:2009B] Limosani, A. et al. --
   Measurement of Inclusive Radiative B-meson Decays with a Photon Energy Threshold of 1.7-GeV --
   `arXiv:0907.1384 <https://arxiv.org/abs/0907.1384>`_

.. [Belle:2010A] Ha, H. et al. --
   Measurement of the decay :math:`B^0\to\pi^-\ell^+\nu` and determination of :math:`|V_{ub}|` --
   `arXiv:1012.0090 <https://arxiv.org/abs/1012.0090>`_

.. [Belle:2013A] Sibidanov, A. et al. --
   Study of Exclusive :math:`B \to X_u \ell \nu` Decays and Extraction of :math:`\|V_{ub}\|` using Full Reconstruction Tagging at the Belle Experiment --
   `arXiv:1306.2781 <https://arxiv.org/abs/1306.2781>`_

.. [Belle:2014A] Abdesselam, A. et al. --
   Measurement of the branching fraction of :math:`B^+ \to \tau^+ \nu_\tau` decays with the semileptonic tagging method and the full Belle data sample --
   `arXiv:1409.5269 <https://arxiv.org/abs/1409.5269>`_

.. [Belle:2015A] Glattauer, R. et al. --
   Measurement of the decay :math:`B\to D\ell\nu_\ell` in fully reconstructed events and determination of the Cabibbo-Kobayashi-Maskawa matrix element :math:`|V_{cb}|` --
   `arXiv:1510.03657 <https://arxiv.org/abs/1510.03657>`_

.. [Belle:2016A] Wehle, S. et al. --
   Lepton-Flavor-Dependent Angular Analysis of :math:`B\to K^\ast \ell^+\ell^-` --
   `arXiv:1612.05014 <https://arxiv.org/abs/1612.05014>`_

.. [Belle:2017A] Abdesselam, A. et al. --
   Precise determination of the CKM matrix element :math:`\left| V_{cb}\right|` with :math:`\bar B^0 \to D^{*\,+} \, \ell^- \, \bar \nu_\ell` decays with hadronic tagging at Belle --
   `arXiv:1702.01521 <https://arxiv.org/abs/1702.01521>`_

.. [Belle:2017B] Waheed, E. et al. --
   Measurement of the CKM matrix element :math:`|V_{cb}|` from :math:`B^0\to D^{*-}\ell^ {+} \nu_\ell` at Belle --
   `arXiv:1809.03290 <https://arxiv.org/abs/1809.03290>`_

.. [Belle:2019A] Prim, Markus T. et. al. --
   Search for :math:`B^+\to \mu^+\nu_{\mu}` and :math:`B^+\to \mu^+N` with inclusive tagging --
   `arXiv:1911.03186 <https://arxiv.org/abs/1911.03186>`_

.. [Belle:2019B] Abdesselam, A. et. al. --
   Test of Lepton-Flavor Universality in :math:`{B\to K^\ast\ell^+\ell^-}` Decays at Belle --
   `arXiv:1904.02440 <https://arxiv.org/abs/1904.02440>`_

.. [C:2006A] Crandall, R.E. --
   Note on fast polylogarithm computation 

.. [C:2010A] Crooks, G.E. --
   The Amoroso Distribution --
   `arXiv:1005.3274 <https://arxiv.org/abs/1005.3274>`_

.. [CBHKSS:1995A] Chung, S.U. and Brose, J. and Hackmann, R. and Klempt, E. and Spanier, S. and Strassburger, C. --
   Partial wave analysis in K-matrix formalism 

.. [CDF:2011A] Aaltonen, T. et al. --
   Observation of the Baryonic Flavor-Changing Neutral Current Decay :math:`\Lambda_{b} \to \Lambda \mu^{+} \mu^{-}` 

.. [CDF:2011B] Aaltonen, T. et al. --
   Measurements of the Angular Distributions in the Decays :math:`B \to K^{(*)} \mu^+ \mu^-` at CDF --
   `arXiv:1108.0695 <https://arxiv.org/abs/1108.0695>`_

.. [CDF:2011C] Aaltonen, T. et al. --
   Measurement of the CP-Violating Phase :math:`\beta_s^{J/\psi\phi}` in :math:`B^0_s \to J/\psi \phi` Decays with the CDF II Detector --
   `arXiv:1112.1726 <https://arxiv.org/abs/1112.1726>`_

.. [CDF:2012A] Aaltonen, T. et al. --
   Precise measurements of exclusive :math:`b \to s \mu^+ \mu^-` decay amplitudes using the full CDF data set 

.. [CERN:2003A] Abbaneo, D. et al. --
   The CKM matrix and the unitarity triangle. Workshop, CERN, Geneva, Switzerland, 13-16 Feb 2002: Proceedings 

.. [CKMfitter:2004A] Charles, J. and Hocker, Andreas and Lacker, H. and Laplace, S. and Le Diberder, F.R. and Malcles, J. and Ocariz, J. and Pivk, M. and Roos, L. --
   CP violation and the CKM matrix: Assessing the impact of the asymmetric :math:`B` factories --
   `arXiv:hep-ph/0406184 <https://arxiv.org/abs/hep-ph/0406184>`_

.. [CKS:2000A] Chetyrkin, K.G. and Kuhn, Johann H. and Steinhauser, M. --
   RunDec: A Mathematica package for running and decoupling of the strong coupling and quark masses --
   `arXiv:hep-ph/0004189 <https://arxiv.org/abs/hep-ph/0004189>`_

.. [CLEO:2000A] Coan, T.E. et al. --
   Study of exclusive radiative B meson decays --
   `arXiv:hep-ex/9912057 <https://arxiv.org/abs/hep-ex/9912057>`_

.. [CMM:1996A] Chetyrkin, Konstantin G. and Misiak, Mikolaj and Munz, Manfred --
   Weak radiative B meson decay beyond leading logarithms --
   `arXiv:hep-ph/9612313 <https://arxiv.org/abs/hep-ph/9612313>`_

.. [CMM:1997A] Chetyrkin, Konstantin G. and Misiak, Mikolaj and Munz, Manfred --
   :math:`|\Delta F| = 1` nonleptonic effective Hamiltonian in a simpler scheme --
   `arXiv:hep-ph/9711280 <https://arxiv.org/abs/hep-ph/9711280>`_

.. [CMS+LHCb:2014A] Khachatryan, V. and others [CMS and LHCb] --
   Observation of the rare :math:`B^0_s\to\mu^+\mu^-` decay from the combined analysis of CMS and LHCb data --
   `arXiv:1411.4413 <https://arxiv.org/abs/1411.4413>`_

.. [CMS:2013A] Chatrchyan, Serguei et al. --
   Angular analysis and branching fraction measurement of the decay :math:`B^0 \to K^{*0} \mu^+\mu^-` --
   `arXiv:1308.3409 <https://arxiv.org/abs/1308.3409>`_

.. [CMS:2013B] Chatrchyan, Serguei et al. --
   Measurement of the :math:`B^0_s \to \mu^+ \mu^-` Branching Fraction and Search for :math:`B^0 \to \mu^+ \mu^-` with the CMS Experiment --
   `arXiv:1307.5025 <https://arxiv.org/abs/1307.5025>`_

.. [CMS:2015A] Khachatryan, V. et al. --
   Angular analysis of the decay :math:`B^0 \to K^{*0} \mu^+ \mu^-` from pp collisions at :math:`\sqrt s = 8` TeV --
   `arXiv:1507.08126 <https://arxiv.org/abs/1507.08126>`_

.. [CMS:2016A] Leonard, N. T. et al. --
   Search and measurement of the :math:`B \to \mu^+\mu^-` rare processes with LHC Run I data  

.. [CMS:2019A] The CMS Collaboration --
   Measurement of properties of :math:`B_s^0 \to \mu^+\mu^-` decays and search for :math:`B^0 \to \mu^+\mu^-` with the CMS experiment 

.. [CMS:2020A] The CMS Collaboration --
   Angular analysis of the decay B:math:`^+` :math:`\to` K:math:`^*`(892):math:`^+\mu^+\mu^-` in proton-proton collisions at :math:`\sqrt{s} = 8` TeV --
   `arXiv:2010.13968 <https://arxiv.org/abs/2010.13968>`_

.. [CMS:2020B] Sirunyan, Albert M. et al. --
   Measurement of the :math:`CP`-violating phase :math:`\phi_\mathrm{s}` in the B:math:`^0_\mathrm{s}\to` J:math:`/\psi\, \phi`(1020) :math:`\to \mu^+\mu^-`K:math:`^+`K:math:`^-` channel in proton-proton collisions at :math:`\sqrt{s} =` 13 TeV --
   `arXiv:2007.02434 <https://arxiv.org/abs/2007.02434>`_

.. [D0:2011A] Abazov, Victor Mukhamedovich et al. --
   Measurement of the CP-violating phase :math:`\phi_s^{J/\psi \phi}` using the flavor-tagged decay :math:`B_s^0 \rightarrow J/\psi \phi` in 8 fb:math:`^{-1}` of :math:`p \bar p` collisions --
   `arXiv:1109.3166 <https://arxiv.org/abs/1109.3166>`_

.. [DBG:2013A] Dutta, Rupak and Bhol, Anupama and Giri, Anjan K. --
   Effective theory approach to new physics in :math:`b \to u` and :math:`b \to c` leptonic and semileptonic decays --
   `arXiv:1307.6653 <https://arxiv.org/abs/1307.6653>`_

.. [DDHLMSW:2019A] Dowdall, R.J. and Davies, C.T.H. and Horgan, R.R. and Lepage, G.P. and Monahan, C.J. and Shigemitsu, J. and Wingate, M. --
   Neutral B-meson mixing from full lattice QCD at the physical point --
   `arXiv:1907.01025 <https://arxiv.org/abs/1907.01025>`_

.. [DDS:2014A] Datta, A. and Duraisamy, M. and Sharma, P --
   Azimuthal :math:`B \to D^{*} \tau^{-} \bar{\nu_\tau}` angular distribution with tensor operators --
   `arXiv:1405.3719 <https://arxiv.org/abs/1405.3719>`_

.. [DKMMO:2008A] Duplancic, G. and Khodjamirian, A. and Mannel, Th. and Melic, B. and Offen, N. --
   Light-cone sum rules for :math:`B \to \pi` form factors revisited --
   `arXiv:0801.1796 <https://arxiv.org/abs/0801.1796>`_

.. [DKMR:2017A] Datta, Alakabha and Kamali, Saeed and Meinel, Stefan and Rashed, Ahmed --
   Phenomenology of :math:` {\Lambda}_b\to {\Lambda}_c\tau {\overline{\nu}}_{\tau } ` using lattice QCD calculations --
   `arXiv:1702.02243 <https://arxiv.org/abs/1702.02243>`_

.. [DLKLR:2019A] Di Luzio, L. and Kirk, M. and Lenz, A. and Rauh, Th. --
   :math:`\Delta M_s` theory precision confronts flavour anomalies --
   `arXiv:1909.11087 <https://arxiv.org/abs/1909.11087>`_

.. [DLM:2015A] Detmold, William and Lehner, Christoph and Meinel, Stefan --
   :math:`\Lambda_b \to p \ell^- \bar{\nu}_\ell` and :math:`\Lambda_b \to \Lambda_c \ell^- \bar{\nu}_\ell` form factors from lattice QCD with relativistic heavy quarks --
   `arXiv:1503.01421 <https://arxiv.org/abs/1503.01421>`_

.. [DLMW:2012A] Detmold, William and Lin, C.-J.David and Meinel, Stefan and Wingate, Matthew --
   :math:`\Lambda_b\to\Lambda \ell^+\ell^-` form factors and differential branching fraction from lattice QCD --
   `arXiv:1212.4827 <https://arxiv.org/abs/1212.4827>`_

.. [DM:2016A] Detmold, William and Meinel, Stefan --
   :math:`\Lambda_b \to \Lambda \ell^+ \ell^-` form factors, differential branching fraction, and angular observables from lattice QCD with relativistic :math:`b` quarks --
   `arXiv:1602.01399 <https://arxiv.org/abs/1602.01399>`_

.. [DMRV:2012A] Descotes-Genon, Sebastien and Matias, Joaquim and Ramon, Marc and Virto, Javier --
   Implications from clean observables for the binned analysis of :math:`B \to K*\mu^+\mu^-` at large recoil --
   `arXiv:1207.2753 <https://arxiv.org/abs/1207.2753>`_

.. [EGN:2010A] Ewerth, Thorsten and Gambino, Paolo and Nandi, Soumitra --
   Power suppressed effects in :math:`\bar{B} \to X_s \gamma` at :math:`O(\alpha_s)` --
   `arXiv:0911.2175 <https://arxiv.org/abs/0911.2175>`_

.. [EHMRR:2010A] Egede, Ulrik and Hurth, Tobias and Matias, Joaquim and Ramon, Marc and Reece, Will --
   New physics reach of the decay mode :math:`\bar{B} \to \bar{K}^{*0}\ell^+\ell^-` --
   `arXiv:1005.0571 <https://arxiv.org/abs/1005.0571>`_

.. [F:2012A] Fleischer, Robert --
   On Branching Ratios of :math:`B_s` Decays and the Search for New Physics in :math:`B^0_s\to \mu^+\mu^-` --
   `arXiv:1208.2843 <https://arxiv.org/abs/1208.2843>`_

.. [FFKMvD:2013A] Faller, Sven and Feldmann, Thorsten and Khodjamirian, Alexander and Mannel, Thomas and van Dyk, Danny --
   Disentangling the Decay Observables in :math:`B^- \to \pi^+\pi^-\ell^-\bar\nu_\ell` --
   `arXiv:1310.6660 <https://arxiv.org/abs/1310.6660>`_

.. [FKKM:2008A] Faller, S. and Khodjamirian, A. and Klein, C. and Mannel, Th. --
   :math:`B \to D^{(*)}` Form Factors from QCD Light-Cone Sum Rules --
   `arXiv:0809.0222 <https://arxiv.org/abs/0809.0222>`_

.. [FLAG:2013A] Aoki, Sinya et al. --
   Review of lattice results concerning low-energy particle physics --
   `arXiv:1310.8555 <https://arxiv.org/abs/1310.8555>`_

.. [FLS:2021A] Felkl, Tobias and Li, Sze Lok and Schmidt, Michael A. --
   A Tale of Invisibility: Constraints on New Physics in :math:`b\to s\nu\nu` --
   `arXiv:2111.04327 <https://arxiv.org/abs/2111.04327>`_

.. [FM:2002A] Feldmann, Thorsten and Matias, Joaquim --
   Forward backward and isospin asymmetry for :math:`B \to K^* \ell^+ \ell^-` decay in the standard model and in supersymmetry --
   `arXiv:hep-ph/0212158 <https://arxiv.org/abs/hep-ph/0212158>`_

.. [FNAL+MILC:2014A] Bailey, Jon A. et al. --
   Update of :math:`|V_{cb}|` from the :math:`\bar{B}\to D^*\ell\bar{\nu}` form factor at zero recoil with three-flavor lattice QCD --
   `arXiv:1403.0635 <https://arxiv.org/abs/1403.0635>`_

.. [FNAL+MILC:2015A] Bailey, Jon A. et al. --
   :math:`|V_{ub}|` from :math:`B\to\pi\ell\nu` decays and (2+1)-flavor lattice QCD --
   `arXiv:1503.07839 <https://arxiv.org/abs/1503.07839>`_

.. [FNAL+MILC:2015B] Bailey, Jon A. et al. --
   :math:`B\to D\ell\nu form factors at nonzero recoil and `|V_{cb}|$ from 2+1-flavor lattice QCD --
   `arXiv:1503.07237 <https://arxiv.org/abs/1503.07237>`_

.. [FNAL+MILC:2015C] Bailey, Jon A. et al. --
   :math:`B\to\pi\ell\ell` form factors for new-physics searches from lattice QCD --
   `arXiv:1507.01618 <https://arxiv.org/abs/1507.01618>`_

.. [FNAL+MILC:2017A] Bazavov, A. et al. --
   :math:`B`- and :math:`D`-meson leptonic decay constants from four-flavor lattice QCD --
   `arXiv:1712.09262 <https://arxiv.org/abs/1712.09262>`_

.. [FY:2011A] Feldmann, Thorsten and Yip, Matthew W.Y. --
   Form Factors for :math:`Lambda_b \to \Lambda` Transitions in {SCET} --
   `arXiv:1111.1844 <https://arxiv.org/abs/1111.1844>`_

.. [FvDV:2018A] Feldmann, Th. and van Dyk, D. and Vos, K.K. --
   Revisiting :math:`B \to \pi\pi \ell \nu` at large dipion masses --
   `arXiv:1807.01924 <https://arxiv.org/abs/1807.01924>`_

.. [GKPR:2013A] Gelhausen, Patrick and Khodjamirian, Alexander and Pivovarov, Alexei A. and Rosenthal, Denis --
   Decay constants of heavy-light vector mesons from QCD sum rules --
   `arXiv:1305.5432 <https://arxiv.org/abs/1305.5432>`_

.. [GKvD:2018A] Gubernari, N. and Kokulu, A. van Dyk, D. --
   :math:`B\to P` and :math:`B\to V` Form Factors from :math:`B`-Meson Light-Cone Sum Rules beyond Leading Twist --
   `arXiv:1811.00983 <https://arxiv.org/abs/1811.00983>`_

.. [GM:2001A] Gambino, Paolo and Misiak, Mikolaj --
   Quark mass effects in :math:`\bar{B} \to X_s \gamma` --
   `arXiv:hep-ph/0104034 <https://arxiv.org/abs/hep-ph/0104034>`_

.. [GN:1997A] Guetta, Dafne and Nardi, Enrico --
   Searching for new physics in rare :math:`B \to \tau` decays --
   `arXiv:hep-ph/9707371 <https://arxiv.org/abs/hep-ph/9707371>`_

.. [GP:2004A] Grinstein, Benjamin and Pirjol, Dan --
   Exclusive rare :math:`B \to K^*\ell^+\ell^-` decays at low recoil: Controlling the long-distance effects --
   `arXiv:hep-ph/0404250 <https://arxiv.org/abs/hep-ph/0404250>`_

.. [GR:1992A] Gelman, A. and Rubin, D.B. --
   Inference from Iterative Simulation Using Multiple Sequences 

.. [GR:2004A] Goldberger, J. and Roweis, S. --
   Hierarchical clustering of a mixture model 

.. [GvDV:2020A] Gubernari, N. and van Dyk, D. and Virto, J. --
   Non-local matrix elements in :math:`B_{(s)}\to \{K^{(*)},\phi\}\ell^+\ell^-` --
   `arXiv:2011.09813 <https://arxiv.org/abs/2011.09813>`_

.. [HFLAV:2019A] Amhis, Yasmine Sara and others --
   Averages of :math:`b`-hadron, :math:`c`-hadron, and :math:`\tau`-lepton properties as of 2018 --
   `arXiv:1909.12524 <https://arxiv.org/abs/1909.12524>`_

.. [HLMW:2005A] Huber, Tobias and Lunghi, Enrico and Misiak, Mikolaj and Wyler, Daniel --
   Electromagnetic logarithms in :math:`\bar B \to  X_s \ell^+ \ell^-` --
   `arXiv:hep-ph/0512066 <https://arxiv.org/abs/hep-ph/0512066>`_

.. [HLMW:2013A] Horgan, Ronald R. and Liu, Zhaofeng and Meinel, Stefan and Wingate, Matthew --
   Lattice QCD calculation of form factors describing the rare decays :math:`B \to K^* \ell^+ \ell^-` and :math:`B_s \to \phi \ell^+ \ell^-` --
   `arXiv:1310.3722 <https://arxiv.org/abs/1310.3722>`_

.. [HLMW:2015A] Horgan, R.R. and Liu, Z. and Meinel, S. and Wingate, M. --
   Rare :math:`B` decays using lattice QCD form factors --
   `arXiv:1501.00367 <https://arxiv.org/abs/1501.00367>`_

.. [HPQCD:2015A] Na, Heechang and Bouchard, Chris M. and Lepage, G. Peter and Monahan, Chris and Shigemitsu, Junko --
   :math:`B \rightarrow D l \nu` form factors at nonzero recoil and extraction of :math:`|V_{cb}|` --
   `arXiv:1505.03925 <https://arxiv.org/abs/1505.03925>`_

.. [HPQCD:2015B] Colquhoun, B. and Davies, C. T. H. and Dowdall, R. J. and Kettle, J. and Koponen, J. and Lepage, G. P. and Lytle A. T. --
   :math:`B`-meson decay constants: a more complete picture from full lattice QCD --
   `arXiv:1503.05762 <https://arxiv.org/abs/1503.05762>`_

.. [HPQCDD:2013A] Bouchard, Chris and Lepage, G.Peter and Monahan, Christopher and Na, Heechang and Shigemitsu, Junko --
   Rare decay :math:`B \to K \ell^+ \ell^-` form factors from lattice QCD --
   `arXiv:1306.2384 <https://arxiv.org/abs/1306.2384>`_

.. [HPQCQ:2017A] Harrison, Judd and Davies, Christine and Wingate, Matthew --
   Lattice QCD calculation of the :math:`{{B}_{(s)}\to D_{(s)}^{*}\ell{\nu}}` form factors at zero recoil and implications for :math:`{|V_{cb}|}` --
   `arXiv:1711.11013 <https://arxiv.org/abs/1711.11013>`_

.. [IKKR:2007A] Ivanov, Mikhail A. and Korner, Jurgen G. and Kovalenko, Sergey G. and Roberts, Craig D. --
   B- to light-meson transition form-factors --
   `arXiv:nucl-th/0703094 <https://arxiv.org/abs/nucl-th/0703094>`_

.. [IKMvD:2014A] Sentitemsu Imsong, I. and Khodjamirian, Alexander and Mannel, Thomas and van Dyk, Danny --
   Extrapolation and unitarity bounds for the :math:`B \to \pi` form factor --
   `arXiv:1409.7816 <https://arxiv.org/abs/1409.7816>`_

.. [KM:2005A] Kruger, F. and Matias, J. --
   Probing new physics via the transverse amplitudes of :math:`B^0\to K^{*0} (\to K^- \pi^+) \ell^+\ell^-` at large recoil --
   `arXiv:hep-ph/0502060 <https://arxiv.org/abs/hep-ph/0502060>`_

.. [KMO:2005A] Khodjamirian, A. and Mannel, Th. and Offen, N. --
   B-meson distribution amplitude from the :math:`B \to \pi` form-factor --
   `arXiv:hep-ph/0504091 <https://arxiv.org/abs/hep-ph/0504091>`_

.. [KMO:2006A] Khodjamirian, A. and Mannel, Th. and Offen, N. --
   Form-factors from light-cone sum rules with B-meson distribution amplitudes --
   `arXiv:hep-ph/0611193 <https://arxiv.org/abs/hep-ph/0611193>`_

.. [KMPW:2010A] Khodjamirian, A. and Mannel, Th. and Pivovarov, A.A. and Wang, Y.-M. --
   Charm-loop effect in :math:`B \to K^{(*)} \ell^{+} \ell^{-}` and :math:`B\to K^*\gamma` --
   `arXiv:1006.4945 <https://arxiv.org/abs/1006.4945>`_

.. [KR:2017A] Khodjamirian, Alexander and Rusov, Aleksey V. --
   :math:`B_{s}\to K \ell \nu_\ell` and :math:`B_{(s)} \to \pi (K) \ell^+\ell^-` decays at large recoil and CKM matrix elements --
   `arXiv:1703.04765 <https://arxiv.org/abs/1703.04765>`_

.. [KS:1996A] Kruger, F. and Sehgal, L.M. --
   Lepton polarization in the decays :math:`B \to X_s \mu^+ \mu^-` and :math:`B \to X_s \tau^+ \tau^-` --
   `arXiv:hep-ph/9603237 <https://arxiv.org/abs/hep-ph/9603237>`_

.. [LATAVG:2011A] Laiho, Jack and Lunghi, Enrico and Van de Water, Ruth S. --
   Lattice QCD inputs to the CKM unitarity triangle analysis --
   `arXiv:0910.2928 <https://arxiv.org/abs/0910.2928>`_

.. [LHCb:2011A] The CMS and LHCb collaborations --
   Search for the rare decay :math:`B^0_s \to \mu^+ \mu^-` with the CMS and LHCb experiments 

.. [LHCb:2011B] Aaij, R et al. --
   Differential branching fraction and angular analysis of the decay :math:`B^{0} \to K^{*0} \mu^+ \mu^-` 

.. [LHCb:2012A] Parkinson, C. et al. --
   Rare Beauty and Charm Decays at LHCb 

.. [LHCb:2012B] Hernando Morata, J. A. et al. --
   Rare decays in LHCb 

.. [LHCb:2012C] Aaij, R et al. --
   Differential branching fraction and angular analysis of the :math:`B^{+} \rightarrow K^{+}\mu^{+}\mu^{-}` decay --
   `arXiv:1209.4284 <https://arxiv.org/abs/1209.4284>`_

.. [LHCb:2012D] Aaij, R et al. --
   First Evidence for the Decay :math:`B_s^0 \to \mu^+ \mu^-` --
   `arXiv:1211.2674 <https://arxiv.org/abs/1211.2674>`_

.. [LHCb:2012E] Aaij, R et al. --
   Measurement of the :math:`C\!P` asymmetry in :math:`B^0 \to K^{*0} \mu^+ \mu^-` decays --
   `arXiv:1210.4492 <https://arxiv.org/abs/1210.4492>`_

.. [LHCb:2013A] Aaij, R et al. --
   Measurement of CP violation and the :math:`B^0_s` meson decay width difference with :math:`B^0_s \to J/\psi K^+K^-` and :math:`B^0_s \to J/\psi \pi^+\pi^-` decays --
   `arXiv:1304.2600 <https://arxiv.org/abs/1304.2600>`_

.. [LHCb:2013B] Aaij, R. et al. --
   Differential branching fraction and angular analysis of the decay :math:`B^{0} \to K^{*0} \mu^{+}\mu^{-}` --
   `arXiv:1304.6325 <https://arxiv.org/abs/1304.6325>`_

.. [LHCb:2013C] Nicola Serra --
   Studies of Electroweak Penguin Transitions in :math:`b \to s \mu \mu` 

.. [LHCb:2013D] Aaij, R. et al. --
   Measurement of the :math:`B^0_s \to \mu^+ \mu^-` branching fraction and search for :math:`B^0 \to \mu^+ \mu^-` decays at the LHCb experiment --
   `arXiv:1307.5024 <https://arxiv.org/abs/1307.5024>`_

.. [LHCb:2013E] Aaij, R. et al. --
   Measurement of the polarization amplitudes  in :math:`B^0 \to J/\psi K^{*}(892)^0` decays --
   `arXiv:1307.2782 <https://arxiv.org/abs/1307.2782>`_

.. [LHCb:2014A] Aaij, R. et al. --
   Differential branching fractions and isospin asymmetries of :math:`B \to K^{(*)} \mu^+ \mu^-` decays --
   `arXiv:1403.8044 <https://arxiv.org/abs/1403.8044>`_

.. [LHCb:2014B] Aaij, Roel et al. --
   Angular analysis of charged and neutral :math:`B \to K \mu^+\mu^-`  decays --
   `arXiv:1403.8045 <https://arxiv.org/abs/1403.8045>`_

.. [LHCb:2014C] Aaij, Roel et al. --
   Test of lepton universality using :math:`B^{+}\rightarrow K^{+}\ell^{+}\ell^{-}` decays --
   `arXiv:1406.6482 <https://arxiv.org/abs/1406.6482>`_

.. [LHCb:2014D] Aaij, Roel et al. --
   Precision measurement of :math:`CP` violation in :math:`B_s^0 \to J/\psi K^+K^-` decays --
   `arXiv:1411.3104 <https://arxiv.org/abs/1411.3104>`_

.. [LHCb:2015A] Aaij, Roel et al. --
   Angular analysis of the :math:`B^{0} \to K^{*0} \mu^{+} \mu^{-}` decay using 3 fb:math:`^{-1}` of integrated luminosity --
   `arXiv:1512.04442 <https://arxiv.org/abs/1512.04442>`_

.. [LHCb:2015B] Aaij, Roel et al. --
   Differential branching fraction and angular analysis of :math:`\Lambda^{0}_{b} \rightarrow \Lambda \mu^+\mu^-` decays --
   `arXiv:1503.07138 <https://arxiv.org/abs/1503.07138>`_

.. [LHCb:2015C] Aaij, Roel et al. --
   Angular analysis and differential branching fraction of the decay :math:`B^0_s\to\phi\mu^+\mu^-` --
   `arXiv:1506.08777 <https://arxiv.org/abs/1506.08777>`_

.. [LHCb:2016A] Aaij, Roel et al. --
   Measurements of the S-wave fraction in :math:`B^{0}\rightarrow K^{+}\pi^{-}\mu^{+}\mu^{-}` decays and the :math:`B^{0}\rightarrow K^{\ast}(892)^{0}\mu^{+}\mu^{-}` differential branching fraction --
   `arXiv:1606.04731 <https://arxiv.org/abs/1606.04731>`_

.. [LHCb:2017A] Aaij, Roel et al. --
   Measurement of the :math:`B^0_s\to\mu^+\mu^-` branching fraction and effective lifetime and search for :math:`B^0\to\mu^+\mu^-` decays --
   `arXiv:1703.05747 <https://arxiv.org/abs/1703.05747>`_

.. [LHCb:2017B] Aaij, Roel et al. --
   Test of lepton universality with :math:`B^{0} \rightarrow K^{*0}\ell^{+}\ell^{-}` decays --
   `arXiv:1705.05802 <https://arxiv.org/abs/1705.05802>`_

.. [LHCb:2018A] Aaij, Roel et al. --
   Angular moments of the decay :math:`\Lambda_b^0 \rightarrow \Lambda \mu^{+} \mu^{-}` at low hadronic recoil --
   `arXiv:1808.00264 <https://arxiv.org/abs/1808.00264>`_

.. [LHCb:2019A] Aaij, Roel et al. --
   Updated measurement of time-dependent CP-violating observables in :math:`B^{0}_{s}\to J/\psi K^+ K^-` decays --
   `arXiv:1906.08356 <https://arxiv.org/abs/1906.08356>`_

.. [LHCb:2020A] Aaij, Roel et al. --
   Measurement of the shape of the B_s^0 -> D_s^{*-}\mu^{+}\nu_{\mu} differential decay rate --
   `arXiv:2003.08453 <https://arxiv.org/abs/2003.08453>`_

.. [LHCb:2021A] Aaij, Roel et al. --
   Branching fraction measurements of the rare :math:`B^0_s\rightarrow\phi\mu^+\mu^-` and :math:`B^0_s\rightarrow f_2^\prime(1525)\mu^+\mu^-` decays --
   `arXiv:2105.14007 <https://arxiv.org/abs/2105.14007>`_

.. [LHCb:2021B] Aaij, Roel et al. --
   Analysis of neutral :math:`B`-meson decays into two muons --
   `arXiv:2108.09284 <https://arxiv.org/abs/2108.09284>`_

.. [LHCb:2021C] Aaij, Roel et al. --
   First measurement of the :math:`CP`-violating phase in :math:`B^0_s\to J/\psi(\to e^+e^-)\phi` decays --
   `arXiv:2105.14738 <https://arxiv.org/abs/2105.14738>`_

.. [LHCb:2021D] Aaij, Roel et al. --
   Angular analysis of the rare decay :math:`B_s^0\to\phi\mu^+\mu^-` --
   `arXiv:2107.13428 <https://arxiv.org/abs/2107.13428>`_

.. [LMvD:2021A] Leljak, Domagoj and Melic, Blazenka and van Dyk, Danny --
   The :math:`\bar{B}\to \pi` form factors from QCD and their impact on :math:`|V_{ub}|` --
   `arXiv:2102.07233 <https://arxiv.org/abs/2102.07233>`_

.. [LT:2007A] Ligeti, Zoltan and Tackmann, Frank J. --
   Precise predictions for :math:`B \to  X_s l^+ l^-` in the large :math:`q^2` region --
   `arXiv:0707.1694 <https://arxiv.org/abs/0707.1694>`_

.. [M:2006A] Misiak, M. et al. --
   Estimate of :math:`\mathcal{B}(\bar B \to X_s \gamma)` at :math:`\mathcal{O}(\alpha_s^2)` --
   `arXiv:hep-ph/0609232 <https://arxiv.org/abs/hep-ph/0609232>`_

.. [MvD:2016A] Meinel, Stefan and van Dyk, Danny --
   Using :math:`\Lambda_b\to \Lambda\mu^+\mu^-` data within a Bayesian analysis of :math:`|\Delta B| = |\Delta S| = 1` decays --
   `arXiv:1603.02974 <https://arxiv.org/abs/1603.02974>`_

.. [MvR:1999A] Melnikov, Kirill and Ritbergen, Timo van --
   The Three loop relation between the :math:`\overline{\text{MS}}` and the pole quark masses --
   `arXiv:hep-ph/9912391 <https://arxiv.org/abs/hep-ph/9912391>`_

.. [NT:2011A] Nishikawa, Tetsuo and Tanaka, Kazuhiro --
   QCD Sum Rules for Quark-Gluon Three-Body Components in the B Meson --
   `arXiv:1109.6786 <https://arxiv.org/abs/1109.6786>`_

.. [PDG:2008A] Amsler, C. and others --
   Review of Particle Physics 

.. [PDG:2010A] Nakamura, K. and others --
   Review of Particle Physics 

.. [PDG:2012A] Beringer, J. and others --
   Review of Particle Physics 

.. [PDG:2018A] Tanabashi, N. and others --
   Review of Particle Physics 

.. [PDG:2020A] Zyla, P. A. and others --
   Review of Particle Physics 

.. [PS:1997A] Peskin, M. and Schroeder, D. --
   An Introduction to Quantum Field Theory 

.. [RBC+UKQCD:2015A] Flynn, J. M. and Izubuchi, T. and Kawanai, T. and Lehner, C. and Soni, A. and Van de Water, R. S. and Witzel, O. --
   :math:`B \to \pi \ell \nu` and :math:`B_s \to K \ell \nu` form factors and :math:`|V_{ub}|` from 2+1-flavor lattice QCD with domain-wall light quarks and relativistic heavy quarks --
   `arXiv:1501.05373 <https://arxiv.org/abs/1501.05373>`_

.. [S:1982A] Sirlin, A. --
   Large M_W and M_Z behaviour of the order alpha corrections to semileptonic processes mediated by W 

.. [S:2004A] Seidel, Dirk --
   Analytic two loop virtual corrections to :math:`b \to d \ell^+ \ell^-` --
   `arXiv:hep-ph/0403185 <https://arxiv.org/abs/hep-ph/0403185>`_

.. [S:2004B] Simon, Barry --
   Orthogonal polynomials on the unit circle: New results --
   `arXiv:math/0405111 <https://arxiv.org/abs/math/0405111>`_

.. [S:2010A] Simone, J. and others --
   The decay constants :math:`f_{D_s}`, :math:`f_{D^+}`, :math:`f_{B_s}` and :math:`f_B` from lattice QCD 

.. [STTW:2013A] Sakaki, Yasuhito and Tanaka, Minoru and Tayduganov, Andrey and Watanabe, Ryoutaro --
   Testing leptoquark models in :math:`\bar B \to D^{(*)} \tau \bar\nu` --
   `arXiv:1309.0301 <https://arxiv.org/abs/1309.0301>`_

.. [TEWWG:2010A] Group, The Tevatron Electroweak Working --
   Combination of CDF and D0 Results on the Mass of the Top Quark Using Up to 5.6 :math:`fb^{-1}` of Data --
   `arXiv:1007.3178 <https://arxiv.org/abs/1007.3178>`_

.. [U:2001A] Uraltsev, Nikolai --
   On the chromomagnetic expectation value :math:`\mu^2_G` and higher power corrections in heavy flavor mesons --
   `arXiv:hep-ph/0111166 <https://arxiv.org/abs/hep-ph/0111166>`_

.. [UTFIT:2013A] Bona, M. et al. --
   The Unitarity Triangle Fit in the Standard Model and Hadronic Parameters from Lattice QCD: A Reappraisal after the Measurements of :math:`\Delta m_s` and :math:`\mathcal{B}(B \to \tau \nu_\tau)` --
   `arXiv:hep-ph/0606167 <https://arxiv.org/abs/hep-ph/0606167>`_

.. [vRVL:1997A] van Ritbergen, T. and Vermaseren, J.A.M. and Larin, S.A. --
   The Four loop beta function in quantum chromodynamics --
   `arXiv:hep-ph/9701390 <https://arxiv.org/abs/hep-ph/9701390>`_

